--- a/.github/workflows/env-checker-ci-schedule.yml
+++ b/.github/workflows/env-checker-ci-schedule.yml
@@ -21,7 +21,7 @@ jobs:
       matrix: # TODO: add more versions and cases where Node.js do not exist
         os: [windows-latest, macos-latest, macos-11, ubuntu-latest]
         node-version: [10, 12, 14]
-        func-version: [none]
+        func-version: [none, 2, 3]
         dotnet-version: [none, 3.1.x, 5.0.x]
 
     runs-on: ${{ matrix.os }}
