--- a/.github/workflows/env-checker-ci-schedule.yml
+++ b/.github/workflows/env-checker-ci-schedule.yml
@@ -23,6 +23,7 @@ jobs:
         node-version: [10, 12, 14]
         func-version: [none, 2, 3]
         dotnet-version: [none, 3.1.x, 5.0.x]
+      max-parallel: 3
 
     runs-on: ${{ matrix.os }}
 
