--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,30 +19,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Validate CD branch
-        if: ${{ github.event_name == 'workflow_dispatch' && github.ref != 'refs/heads/main' && github.ref != 'refs/heads/dev' }}
-        run: |
-          echo It's not allowed to run CD on other branch except main and dev.
-          exit 1
-
-      - name: Validate inputs for main
-        if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main' && github.event.inputs.preid != 'rc' && github.event.inputs.preid != 'stable' }}
-        run: |
-          echo It's not allowed to release alpha on main branch.
-          exit 1
-
-      - name: Valiadte inputs for dev
-        if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/dev' && github.event.inputs.preid != 'alpha' }}
-        run: |
-          echo It's not allowed to release RC or stable on dev branch.
-          exit 1
-
-      - name: Validate schedule
-        if: ${{ github.event_name == 'schedule' && github.ref != 'refs/heads/dev' }}
-        run: |
-          echo It's not allowed to run schedule release except dev branch.
-          exit 1
-
       - name: Checkout branch
         uses: actions/checkout@v2
         with:
@@ -79,122 +55,12 @@ jobs:
           git config --global user.email 'yiz@microsoft.com'
 
       - name: release alpha npm packages to npmjs.org
-        if: ${{ github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/dev' && github.event.inputs.preid == 'alpha')}}
+        if: ${{ github.ref == 'refs/heads/failpoint/test' && github.event.inputs.preid == 'alpha' }}
         run: |
-          npx lerna version prerelease --preid=alpha.$(git rev-parse --short HEAD) --exact --no-push --allow-branch dev --yes
-          npx lerna publish from-package --dist-tag=alpha --yes --allow-branch dev
-
-      - name: version rc npm packages to npmjs.org
-        if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main' && github.event.inputs.preid == 'rc' && github.event.inputs.skip-version-rc == 'no'}}
-        run: |
-          npx lerna version --conventional-commits --conventional-prerelease --preid=rc --no-changelog --yes
-
-      - name: version stable npm packages to npmjs.org
-        if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main' && github.event.inputs.preid == 'stable' }}
-        run: |
-          npx lerna version --conventional-commits --conventional-graduate --no-changelog --yes
-      
-      - name: version change
-        id: version-change
-        run: |
-          echo "::set-output name=CHANGED::$(git tag --points-at HEAD | xargs)"
-          echo "::set-output name=TEMPLATE_VERSION::$(git tag --points-at HEAD | grep templates)"
-          echo "::set-output name=EXTENSION_VERSION::$(git tag --points-at HEAD | grep ms-teams-vscode-extension@ | cut -d '@' -f2)"
-          if git tag --points-at HEAD | grep templates | grep rc;
-          then
-              git push -d origin $(git tag --points-at HEAD | grep templates | grep rc)
-          fi
-
-      - name: update cli ai key
-        if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main' && (github.event.inputs.preid == 'stable'||github.event.inputs.preid == 'rc') }}
-        uses: jossef/action-set-json-field@v1
-        with:
-          file: ./packages/cli/package.json
-          field: aiKey
-          value: ${{ secrets.CLI_PUBLIC_AIKEY }}
-
-      - name: update extension ai key
-        if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main' && (github.event.inputs.preid == 'stable'||github.event.inputs.preid == 'rc') }}
-        uses: jossef/action-set-json-field@v1
-        with:
-          file: ./packages/vscode-extension/package.json
-          field: aiKey
-          value: ${{ secrets.EXT_PUBLIC_AIKEY }}
-      
-      - name: commit change on local
-        if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main' && (github.event.inputs.preid == 'stable'||github.event.inputs.preid == 'rc') }}
-        run: |
-          git add .
-          git commit -m "chore: update ai key"
-
-      - name: publish rc npm packages to npmjs.org
-        if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main' && github.event.inputs.preid == 'rc' }}
-        run: |
-          npx lerna publish from-package --dist-tag=rc --yes
-
-      - name: publish stable npm packages to npmjs.org
-        if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main' && github.event.inputs.preid == 'stable' }}
-        run: |
-          npx lerna publish from-package --yes
-
-      - name: Install Mustache
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') }}
-        run: curl -sSL https://git.io/get-mo -o mo && chmod +x mo && sudo mv mo /usr/local/bin/
-
-      - name: generate templates
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') }}
-        run: .github/scripts/template-zip-autogen.sh
-
-      - name: release templates' alpha version to github
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'alpha') }}
-        uses: marvinpinto/action-automatic-releases@latest
-        with:
-          repo_token: ${{ secrets.CD_PAT }}
-          prerelease: true
-          automatic_release_tag: "templates@0.0.0-alpha"
-          files: |
-            ./*.zip
-
-      - name: release templates' RC version to github
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'rc' }}
-        uses: marvinpinto/action-automatic-releases@latest
-        with:
-          repo_token: ${{ secrets.CD_PAT }}
-          prerelease: true
-          automatic_release_tag: "templates@0.0.0-rc"
-          files: |
-            ./*.zip
-
-      - name: Create Templates Stable Release
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'stable' }}
-        uses: ncipollo/release-action@v1.7.3
-        with:
-          artifacts: ./*.zip
-          name: 'Release for ${{ steps.version-change.outputs.TEMPLATE_VERSION }}'
-          token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ steps.version-change.outputs.TEMPLATE_VERSION }}
-          allowUpdates: true
-
-      - name: Generate Tag List
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'stable' }}
-        run: git tag | grep templates@ > ./template-tags.txt
-
-      - name: Update Template Tag list Release
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'stable' }}
-        uses: ncipollo/release-action@v1.7.3
-        with:
-          artifacts: ./template-tags.txt
-          name: 'Template Tag List'
-          body: 'Release to maintain template tag list.'
-          token: ${{ secrets.github_token }}
-          tag: 'template-tag-list'
-          allowUpdates: true  
-    
-      - name: cleanup templates
-        run: rm -rf ./*.zip && git clean -df
+          npx lerna version prerelease --preid=alpha.failtpoint --exact --no-push --allow-branch failpoint/test --yes
+          npx lerna publish from-package --dist-tag=alpha.failtpoint --yes --allow-branch failpoint/test
 
       - name: pack vsix
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') }}
         uses: nick-invision/retry@v2
         with:
           timeout_minutes: 10
@@ -207,7 +73,6 @@ jobs:
             npx vsce package
 
       - name: release VSCode extension to github
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') }}
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: ${{ secrets.CD_PAT }}
