--- a/packages/cli/.vscode/launch.json
+++ b/packages/cli/.vscode/launch.json
@@ -91,11 +91,39 @@
         "permission",
         "grant",
         "--folder",
-        "../../../../Test/collaborate",
+        "../../../teams/app001",
         "--env",
         "default",
         "--email",
         "email.address"
+      ],
+      "env": {
+        "TEAMSFX_MULTI_ENV": "true"
+      },
+      "outFiles": [
+        "${workspaceFolder}/lib/**/*.js",
+        "${workspaceFolder}/../fx-core/build/**/*.js",
+        "${workspaceFolder}/../api/build/**/*.js"
+      ],
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/lib/**/*.js",
+        "${workspaceFolder}/../fx-core/build/**/*.js",
+        "${workspaceFolder}/../api/build/**/*.js"
+      ]
+    },
+    {
+      "type": "pwa-node",
+      "request": "launch",
+      "name": "Launch permission list-collaborator command (non-interactive)",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}/cli.js",
+      "args": [
+        "permission",
+        "list-collaborator",
+        "--folder",
+        "../../../teams/app001",
+        "--env",
+        "default"
       ],
       "env": {
         "TEAMSFX_MULTI_ENV": "true"
