--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -213,6 +213,16 @@
           "group": "inline@3"
         },
         {
+          "command": "fx-extension.openSubscriptionInPortal",
+          "when": "view == teamsfx-environment && viewItem == openSubscriptionInPortal",
+          "group": "inline@3"
+        },
+        {
+          "command": "fx-extension.openResourceGroupInPortal",
+          "when": "view == teamsfx-environment && viewItem == openResourceGroupInPortal",
+          "group": "inline@3"
+        },
+        {
           "command": "fx-extension.grantPermission",
           "when": "view == teamsfx-environment && viewItem == addCollaborator",
           "group": "inline@3"
@@ -276,6 +286,14 @@
         },
         {
           "command": "fx-extension.viewEnvironmentWithIcon",
+          "when": "false"
+        },
+        {
+          "command": "fx-extension.openSubscriptionInPortal",
+          "when": "false"
+        },
+        {
+          "command": "fx-extension.openResourceGroupInPortal",
           "when": "false"
         },
         {
@@ -446,6 +464,18 @@
         "command": "fx-extension.viewEnvironmentWithIcon",
         "title": "View environment",
         "icon": "$(file-symlink-directory)",
+        "enablement": "fx-extension.isMultiEnvEnabled"
+      },
+	    {
+        "command": "fx-extension.openSubscriptionInPortal",
+        "title": "Open in Portal",
+        "icon": "$(ports-open-browser-icon)",
+        "enablement": "fx-extension.isMultiEnvEnabled"
+      },
+	    {
+        "command": "fx-extension.openResourceGroupInPortal",
+        "title": "Open in Portal",
+        "icon": "$(ports-open-browser-icon)",
         "enablement": "fx-extension.isMultiEnvEnabled"
       },
       {
