chore: reorganize files

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -19,7 +19,9 @@
   "types": "types/teamsfx.d.ts",
   "typesVersions": {
     "*": {
-      "internal": ["types/internal.d.ts"]
+      "internal": [
+        "types/internal.d.ts"
+      ]
     }
   },
   "scripts": {
