chore: frontend start and problem matcher

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -678,7 +678,7 @@
         "background": {
           "activeOnStart": true,
           "beginsPattern": ".*",
-          "endsPattern": "Compiled|Failed"
+          "endsPattern": "to stop the server"
         },
         "severity": "error"
       },
