--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -103,6 +103,7 @@
     "@types/adm-zip": "^0.4.33",
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
+    "@types/chai-spies": "^1.0.3",
     "@types/cryptr": "^4.0.1",
     "@types/dateformat": "^3.0.1",
     "@types/express": "^4.17.9",
@@ -130,6 +131,7 @@
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "chai": "^4.2.0",
+    "chai-spies": "^1.0.0",
     "chai-as-promised": "^7.1.1",
     "copy-webpack-plugin": "^6.4.1",
     "dotenv": "^8.2.0",
