--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -125,6 +125,7 @@
     "@types/semver": "^7.3.4",
     "@types/sinon": "^9.0.10",
     "@types/tedious": "^4.0.3",
+    "@types/tmp": "^0.2.0",
     "@types/url-parse": "^1.4.3",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.1",
@@ -151,6 +152,7 @@
     "ts-loader": "^8.0.3",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
+    "tmp": "^0.2.1",
     "ttypescript": "^1.5.12",
     "typedoc": "^0.20.35",
     "typescript": "^4.2.3",
