--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -140,6 +140,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
     "faker": "^5.5.2",
+    "find-process": "^1.4.4",
     "lint-staged": "^10.5.4",
     "mocha": "^9.1.3",
     "mocha-junit-reporter": "^2.0.2",
