--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -72,6 +72,7 @@
     "http-close": "^1.0.0",
     "ignore": "^5.1.8",
     "install": "^0.13.0",
+    "is-wsl": "^2.2.0",
     "js-base64": "^3.6.0",
     "js-yaml": "^4.0.0",
     "jsonschema": "^1.4.0",
@@ -82,6 +83,7 @@
     "mustache": "^4.2.0",
     "node-forge": "^0.10.0",
     "node-ts-uuid": "^1.0.8",
+    "open": "^8.4.0",
     "openapi-types": "^7.2.3",
     "proper-lockfile": "^4.1.2",
     "read-package-json-fast": "^2.0.3",
