--- a/lerna.json
+++ b/lerna.json
@@ -4,6 +4,7 @@
         "packages/api",
         "packages/fx-core",
         "packages/sdk",
+        "packages/sdk-bot",
         "packages/cli",
         "packages/vscode-extension",
         "packages/failpoint-ts",
