--- a/packages/sdk-bot/package.json
+++ b/packages/sdk-bot/package.json
@@ -42,7 +42,7 @@
   "sideEffects": false,
   "dependencies": {
     "@azure/core-auth": "^1.3.2",
-    "@microsoft/teamsfx": "../sdk",
+    "@microsoft/teamsfx": "file:../sdk",
     "botbuilder": ">=4.15.0 <5.0.0",
     "botbuilder-dialogs": ">=4.15.0 <5.0.0",
     "botframework-schema": ">=4.15.0 <5.0.0",
