--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -53,13 +53,9 @@
     "@azure/msal-node": "~1.1.0",
     "@microsoft/microsoft-graph-client": "^3.0.1",
     "axios": "^0.24.0",
-    "botbuilder": ">=4.15.0 <5.0.0",
-    "botbuilder-dialogs": ">=4.15.0 <5.0.0",
-    "botframework-schema": ">=4.15.0 <5.0.0",
     "jwt-decode": "^3.1.2",
     "tedious": "^14.0.0",
-    "tslib": "^2.3.1",
-    "uuid": "^8.3.2"
+    "tslib": "^2.3.1"
   },
   "peerDependencies": {
     "@microsoft/teams-js": "^1.9.0"
@@ -84,11 +80,9 @@
     "@types/sinon": "^10.0.6",
     "@types/tedious": "^4.0.5",
     "@types/url-join": "^4.0.1",
-    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^4.13.0",
     "adm-zip": "^0.5.9",
-    "botbuilder-core": ">=4.15.0 <5.0.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "concurrently": "^6.3.0",
